language/move-lang/tests/move_check/translated_ir_tests/commands/dead_return.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/dead_return.move:4:9 ───
   │
 4 │         return 0
   │         ^^^^^^^^ Unreachable code. This statement (and any following statements) will not be executed. In some cases, this will result in unused resource values.
   │

